# AquaCrop_cpp

./: CMakeLists.txt  LICENSE  MIDWEST_TEST_ANALYSIS.md  NOTICE  README.md  agent.md  create_stubs.sh  read_file.py  test_results.json
LIST/: ListProjects.txt
PARAM/: ListProjects.txt
PARAM/case-01/: project.ACp
PARAM/case-01/output/: case-01_analysis.csv
PARAM/case-02/: project.ACp
PARAM/case-02/output/: result.txt  result_parsed.csv
PARAM/case-02/params/: params.txt
PARAM/case-midwest-corn/: params.txt  project.ACp
PARAM/case-midwest-corn/CLIM/: calendar.TXT  climate.TXT  co2.TXT  eto.TXT  rain.TXT  temperature.TXT
PARAM/case-midwest-corn/CROP/: crop.TXT
PARAM/case-midwest-corn/GWT/: groundwater.TXT
PARAM/case-midwest-corn/IRRIG/: irrigation.TXT
PARAM/case-midwest-corn/MANAGE/: management.TXT
PARAM/case-midwest-corn/OBS/: observations.TXT
PARAM/case-midwest-corn/OFF/: offseason.TXT
PARAM/case-midwest-corn/SOIL/: soil.TXT  swcini.TXT
cmake/: AquaCropConfig.cmake.in
docs/: README.md  api.md  architecture.md  cpp_aquacrop_design.md  cpp_aquacrop_full_documentation.md  design.md  development_progress.md  future_development.md  installation.md  progress_report.md  usage.md
docs/guides/: CONTRIBUTING.md
include/AquaCrop/: ClimProcessing.h  Global.h  InfoResults.h  InitialSettings.h  Kinds.h  PrepareFertilitySalinity.h  ProjectInput.h  RootUnit.h  Run.h  Simul.h  StartUnit.h  TempProcessing.h  Utils.h
python/: CMakeLists.txt  _core.cpp  analyze_placeholder_results.py  analyze_results.py  aquacrop_wrapper.py  drive_classic.py  generate_report.py  improved_driver.py  midwest_test.py  pyproject.toml  run_example.py  setup.py  visualize_results.py
python/aquacrop/: __init__.py  model.py  parameters.py  results.py
scripts/: analysis_results.py  growth_analysis.py  run_classic.sh
src/: ClimProcessing.cpp  Global.cpp  InfoResults.cpp  InitialSettings.cpp  PrepareFertilitySalinity.cpp  ProjectInput.cpp  RootUnit.cpp  Run.cpp  Simul.cpp  StartUnit.cpp  TempProcessing.cpp  Utils.cpp  main.cpp
test/: CMakeLists.txt  cpp_parameter_format.md  path_analysis_report.md  test_case_results.md  test_main.cpp
test/case-01/: project.ACp
test/case-01/params/: params.txt
test/case-02/: project.ACp
visualization/: README.md  simulation_report.html
